--- a/React_Native_App_Chat-main/package.json
+++ b/React_Native_App_Chat-main/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@react-native-async-storage/async-storage": "^1.17.4",
+    "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-firebase/app": "^14.7.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
@@ -19,11 +21,14 @@
     "@types/react": "^18.0.0",
     "@ui-kitten/components": "^5.1.2",
     "firebase": "^9.6.10",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-gradient-header": "^0.2.1",
     "react-native-image-picker": "^4.8.2",
+    "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-modals": "^0.22.3",
     "react-native-paper": "^4.12.0",
@@ -36,7 +41,8 @@
     "react-redux": "^7.2.8",
     "react-router-native": "^6.3.0",
     "redux": "^4.1.2",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
