--- a/ChatApp/package.json
+++ b/ChatApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "firebase": "^9.8.1",
@@ -22,11 +23,14 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-image-picker": "^4.8.3",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^5.4.22",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-uuid": "^2.0.1",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-webrtc": "^1.100.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
