--- a/ChatApp/package.json
+++ b/ChatApp/package.json
@@ -20,7 +20,9 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "firebase": "^9.8.1",
+    "lottie-react-native": "^5.1.3",
     "moment": "^2.29.3",
+    "moment-range": "^4.0.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-emoji-selector": "^0.2.0",
