--- a/ChatApp/package.json
+++ b/ChatApp/package.json
@@ -10,17 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@notifee/react-native": "^5.3.0",
     "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-native-clipboard/clipboard": "^1.10.0",
-    "@react-native-firebase/app": "^14.11.0",
-    "@react-native-firebase/messaging": "^14.11.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "firebase": "^9.8.1",
-    "lottie-react-native": "^5.1.3",
     "moment": "^2.29.3",
     "moment-range": "^4.0.2",
     "react": "17.0.2",
@@ -30,6 +26,7 @@
     "react-native-image-picker": "^4.8.3",
     "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-modal": "^13.0.1",
+    "react-native-onesignal": "^4.3.11",
     "react-native-pager-view": "^5.4.22",
     "react-native-paper": "^4.12.1",
     "react-native-push-notification": "^8.1.1",
