--- a/ChatApp/android/settings.gradle
+++ b/ChatApp/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'ChatApp'
+include ':@react-native-firebase_firestore'
+project(':@react-native-firebase_firestore').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/firestore/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 includeBuild('../node_modules/react-native-gradle-plugin')
