--- a/ChatApp/package.json
+++ b/ChatApp/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-emoji-selector": "^0.2.0",
+    "react-native-firebase": "^5.6.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-image-picker": "^4.8.3",
     "react-native-loading-spinner-overlay": "^3.0.0",
@@ -29,7 +30,6 @@
     "react-native-onesignal": "^4.3.11",
     "react-native-pager-view": "^5.4.22",
     "react-native-paper": "^4.12.1",
-    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-tab-view": "^3.1.1",
